update swagger, fix primary key increment
