# chal-2/docs/swagger.json
@@ -45,7 +45,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Movie"
+                                "$ref": "#/definitions/models.Movie"
                             }
                         }
                     }
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Movie"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     }
                 ],
@@ -72,7 +72,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.Movie"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "400": {
@@ -128,7 +128,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Movie"
+                                "$ref": "#/definitions/models.Movie"
                             }
                         }
                     }
@@ -157,7 +157,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Movie"
+                                "$ref": "#/definitions/models.Movie"
                             }
                         }
                     },
@@ -194,7 +194,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Movie"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     }
                 ],
@@ -202,7 +202,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Movie"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "400": {
@@ -272,7 +272,7 @@
         }
     },
     "definitions": {
-        "main.Movie": {
+        "models.Movie": {
             "type": "object",
             "required": [
                 "artists",
@@ -304,7 +304,8 @@
                     }
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 },
                 "title": {
                     "type": "string"
